--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,10 @@
 
 		<app.runtime>4.2.2</app.runtime>
 		<mule.maven.plugin.version>3.3.5</mule.maven.plugin.version>
-	<munit.version>2.2.1</munit.version>
+	    
+	        <sonar.organization>susantkumar</sonar.organization>
+                <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+	        <munit.version>2.2.1</munit.version>
     </properties>
 
 	<build>
